<resources>
    <string name="app_name">Организатор</string>
    <string name="etLogin">Логин или e-mail</string>
    <string name="etPassword">Пароль</string>
    <string name="tvLogIn">Log In</string>
    <string name="btnSignIn">Войти</string>
    <string name="tvOr">ИЛИ</string>
    <string name="btnSignUp">Зарегистрироватся</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvCreateAccount">New Account</string>
    <string name="etNameCrAcAcHint">Имя</string>
    <string name="etLoginCrAcAcHint">Логин</string>
    <string name="etPasswordCrAcAcHint">Пароль</string>
    <string name="etConfirmPasswordCrAcAcHint">Потв. пароль</string>
    <string name="etEmailCrAcAcHint">e-mail</string>
    <string name="tvPhoneCrAcAc">номер телефона</string>
    <string name="tvDefCityCrAcAc">город по умол.</string>
    <string name="btnCreateCrAcAc">Создать</string>
    <string name="tvHeaderSeMeStFr">Выбор статуса пользователя</string>
    <string name="tvCitySeMeStFr">Выбор города</string>
    <string name="tvStatusSeMeStFr">Определить статус</string>
    <string name="btnConfirmSeMeStFr">Потвердить выбор</string>
    <string name="tvHeaderCrEv">Новое событие</string>
    <string name="tvFieldCrEv">На поле </string>
    <string name="btnNewFieldCrEv">new</string>
    <string name="tvDateCrEv">Дата</string>
    <string name="btnDateCrEv">Дата</string>
    <string name="tvStartTimeCrEv">Время начала</string>
    <string name="btnStartTimeCrEv">Время начала</string>
    <string name="tvDurationCrEv">Длительность</string>
    <string name="etPriceCrEvHint">Цена</string>
    <string name="tvListOfParticipantsCrEv">Список участников</string>
    <string name="tvPhoneCrEv">Номер организатора</string>
    <string name="etPasswordCrEvHint">Пароль</string>
    <string name="btnConfirmCrEv">Создать</string>
    <string name="tvHeaderShAlEvFr">All Games</string>
    <string name="tvFirstLineShAlEvReAd">Дата и время: </string>
    <string name="tvSecondLineShAlEvReAd">Место: </string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="btnBackCrAcAc">Вернутся назад</string>
    <string name="btnAddUserCrEv">Добавить участников</string>
    <string name="tvCityCrEv">В городе </string>
    <string name="btnNewCityCrEv">new</string>
    <string name="tvCreateCity">New City</string>
    <string name="etCityNameCrCiHint">Название</string>
    <string name="tvRegionCrCi">Регион</string>
    <string name="btnCreateCrCi">Создать</string>
    <string name="btnBackCrCi">Отмена</string>
    <string name="tvCreateField">New Field</string>
    <string name="tvCityCrFi">Город</string>
    <string name="btnNewCityCrFi">Создать город</string>
    <string name="etNameCrFiHint">Название поля</string>
    <string name="tvLightCrFi">Освещение</string>
    <string name="tvCoatingCrFi">Покрытие</string>
    <string name="tvShowerCrFi">Душ</string>
    <string name="tvRoofCrFi">Крыша</string>
    <string name="etGeolatCrFiHint">Широта</string>
    <string name="etAddressCrFiHint">Адрес</string>
    <string name="btnCreateCrFi">Создать</string>
    <string name="btnBackCrFi">Отмена</string>
    <string name="tvCitySePaAc">Поиск в городе: </string>
    <string name="edBinarySePaAc">Быстрый поиск</string>
    <string name="btnConfirmSePaAc">Подвердить выбор</string>
    <string name="btnCancelSePaAc">Отменить выбор</string>
    <string name="tvSelectParticipantsSePaAc">Participants</string>
    <string name="tvHeaderShAuUsEvAc">Your Games</string>
    <string name="tvFirstLineShAuUsEvReAd">событие назначено на</string>
    <string name="tvSecondLineShAuUsEvReAd">состоится в</string>
    <string name="tvThirdLineShAuUsEvReAd">в городе</string>
    <string name="tvFourthLineShAuUsEvReAd">на поле</string>
    <string name="tvFifthLineShAuUsEvReAd">ваш статус</string>
    <string name="tvHeadAdAnInAc">News</string>
    <string name="btnNewNoteAdAnInAc">Создать новость</string>
    <string name="tvNewNoteCrNeNoAc">New Note</string>
    <string name="etMessCrNeNoAcHint">текст записи</string>
    <string name="etHeadCrNeNoAcHint">загаловок записи</string>
    <string name="btnConfirmCrNeNoAc">Создать</string>
    <string name="btnCancelCrNeNoAc">Отмена</string>
    <string name="title_activity_navigation_drawer_log_in">Организатор</string>
    <string name="show_user_events">События пользователя</string>
    <string name="show_all_events">Все события</string>
    <string name="news_line">Новости</string>
    <string name="exit_app">Завершить приложение</string>
    <string name="log_out">Выйти из аккаунта</string>
    <string name="item_take_part_show_all_rva">принять участие</string>
    <string name="item_about_event_show_all_rva">подробная информация</string>
    <string name="item_about_event_show_auth_user_rva">подробная информация</string>
    <string name="item_leave_event_show_auth_user_rva">покинуть событие</string>
    <string name="item_delete_event_show_auth_user_rva">удалить событие</string>
    <string name="item_edit_event_show_auth_user_rva">редактировать событие</string>
    <string name="tvHeaderEdEv">Редактирование События</string>
    <string name="tvCityEdEv">Город</string>
    <string name="btnNewCityEdEv">Создать город</string>
    <string name="tvFieldEdEv">Поле</string>
    <string name="btnNewFieldEdEv">Создать новое поле</string>
    <string name="tvDateEdEv">Дата</string>
    <string name="btnDateEdEv">Дата</string>
    <string name="tvStartTimeEdEv">Время начала</string>
    <string name="btnStartTimeEdEv">Время начала</string>
    <string name="tvDurationEdEv">Длительность</string>
    <string name="tvPriceEdEv">Цена</string>
    <string name="tvListOfParticipantsEdEv">Список учасников</string>
    <string name="btnAddUserEdEv">Добавить учасников</string>
    <string name="tvPhoneEdEv">Номер организатора</string>
    <string name="tvPasswordEdEv">Пароль</string>
    <string name="btnConfirmEdEv">Подтвердить</string>
    <string name="tvPhoneCrFi">Телефон</string>
    <string name="etGeolongCrFiHint">Долгота</string>
    <string name="tvFirstLineShFiCaReAd">Город</string>
    <string name="tvSecondLineShFiCaReAd">Назв.</string>
    <string name="tvThirdLineShFiCaReAd">Телефон</string>
    <string name="item_about_field_catalog_rva">подробная информация</string>
    <string name="show_field_catalog">Каталог полей</string>
    <string name="btnCheckConMaAc">ПРОВЕРКА СОЕДИНЕНИЯ!</string>
    <string name="tvTypeShAlEvReAd">ИГРА</string>
    <string name="tvThirdLineShAlEvReAd">Город:</string>
    <string name="tvTypeShAuUsEvReAd">ИГРА</string>
    <string name="title_activity_maps">Map</string>
    <string name="tvGeoInputMethodCrFi">Геопозиция</string>
    <string name="btnSelectGeoposCrFi">на карте</string>
    <string name="btnGeoSelect">OK</string>
    <string name="btnLocalDbFieldMaAc">Каталог футбольных полей</string>
    <string name="btnExitMaAc">Завершить приложение</string>
    <string name="btnAuthorizationMaAc">Авторизация</string>
    <string name="settings">Настройки аккаунта</string>
    <string name="btnChangeLogoSeFr">Выбрать логотип</string>
    <string name="btnChangeNameSeFr">Изменить имя</string>
    <string name="btnChangeLoginSeFr">Изменить логин</string>
    <string name="btnChangePasSeFr">Изменить пароль</string>
    <string name="btnChangeEmailSeFr">Изменить e-mail</string>
    <string name="btnChangePhoneSeFr">Изменить телефон</string>
    <string name="btnChangeCitySeFr">Изменить город</string>
    <string name="btnDeleteProfileSeFr">Удалить аккаунт</string>
    <string name="btnSelectLogoNoNeNoAc">Выбрать логотип поста</string>
    <string name="tvNewNoteEdNeNoAc">Edit Note</string>
    <string name="btnConfirmEdNeNoAc">Принять</string>
    <string name="btnDeleteEdNeNoAc">Удалить пост</string>
    <string name="create_new_event">Создать событие</string>
    <string name="hintEtPhone">Номер телефона (XXX)XXX-XX-XX</string>
    <string name="error_enter_phone">формат (XXX)XXX-XX-XX</string>
    <string name="hintEtPhoneCrFi">Номер телефона (XXX)XXX-XX-XX</string>
    <string name="hintEtChangePhoneSeFr">Номер телефона (XXX)XXX-XX-XX</string>
    <string name="hintEtPhoneCrAcAc">Номер телефона (XXX)XXX-XX-XX</string>
    <string name="tvCreateEventCrEv">New Game</string>
    <string name="tvHeadShFiCaFr">Fields</string>
    <string name="tvHeadSeFr">Settings</string>
    <string name="tvHeaderWeFr">Web Info</string>
    <string name="web_info">Веб инфо</string>
    <string name="btnAboutUs">О нас</string>
    <string name="about_us">О нас</string>
    <string name="tvHeadAbUsFr">About Us</string>

</resources>
