<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/show_field_catalog"
            android:icon="@drawable/icon_all_events"
            android:title="@string/show_field_catalog" />
        <item
            android:id="@+id/show_user_events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/show_user_events" />
        <item
            android:id="@+id/show_all_events"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/show_all_events" />
        <item
            android:id="@+id/news_line"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/news_line" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/log_out"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/log_out" />
            <item
                android:id="@+id/exit_app"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/exit_app" />
        </menu>
    </item>

</menu>
